# Roomba-Kinector

./: .gitmodules  CMakeLists.txt  GuiController.cpp  GuiController.h  PoseRecognizer.cpp  PoseRecognizer.h  README  RawImagesWindow.cpp  RawImagesWindow.h  RawImagesWindow.ui  roomba.cpp  roomba.h
